Update Sentiment analysis - Amazon reviews.ipynb

--- a/Sentiment analysis - Amazon reviews.ipynb
+++ b/Sentiment analysis - Amazon reviews.ipynb
@@ -2117,7 +2117,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# We are selecting the Logistic Regression Algorith because its provide us the best precission score 0.82"
+    "# We are selecting the Logistic Regression Algorithm because its provide us the best precission score 0.82"
    ]
   },
   {
